<?xml version="1.0"?>
<package format="3">
  <name>layered_exercise</name>
  <version>0.0.0</version>
  <description>The test package</description>
  <maintainer email="layered@todo.todo">layered</maintainer>
  <license>Closed</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
